--- a/AngularSPA/AngularSPA.csproj
+++ b/AngularSPA/AngularSPA.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -26,6 +26,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\canal-details\canal-details.component.ts" />
     <None Remove="ClientApp\src\app\canal\canal.component.ts" />
+    <None Remove="ClientApp\src\app\video-details\video-details.component.ts" />
     <None Remove="ClientApp\src\app\video\video.component.ts" />
     <None Remove="ClientApp\src\app\youtube-search\youtube-search.component.ts" />
   </ItemGroup>
@@ -38,8 +39,13 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\canal-details\canal-details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\canal\canal.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\video-details\video-details.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\video\video.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\youtube-search\youtube-search.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\custom-content\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
