--- a/AngularSPA/ClientApp/package.json
+++ b/AngularSPA/ClientApp/package.json
@@ -25,6 +25,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "font-awesome": "^4.7.0",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.0",
     "popper.js": "^1.14.3",
@@ -47,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "npm-install-webpack-plugin": "^4.0.5",
     "typescript": "3.4.5"
   },
   "optionalDependencies": {
